Refine updates job polling and pagination

--- a/templates/updates.html
+++ b/templates/updates.html
@@ -236,11 +236,10 @@
             compareUrl: {{ url_for('updates.api_updates_compare')|tojson }},
             fixNamesUrl: {{ url_for('updates.api_updates_fix_names')|tojson }},
             removeDuplicatesUrl: {{ url_for('updates.api_updates_remove_duplicates')|tojson }},
-            deleteDuplicateUrlTemplate: {{ url_for('updates.api_updates_remove_duplicate', processed_game_id=0)|replace('0', '{id}')|tojson }},
+            deleteDuplicateBaseUrl: {{ url_for('updates.api_updates_remove_duplicate', processed_game_id=0).rsplit('/', 1)[0]|tojson }},
             jobsUrl: {{ url_for('updates.api_updates_job_list')|tojson }},
-            jobDetailUrlTemplate: {{ url_for('updates.api_updates_job_detail', job_id='job')|replace('job', '{id}')|tojson }},
-            detailUrlTemplate: {{ url_for('updates.api_updates_detail', processed_game_id=0)|replace('0', '{id}')|tojson }},
-            coverUrlTemplate: {{ url_for('updates.api_updates_cover', processed_game_id=0)|replace('0', '{id}')|tojson }},
+            detailBaseUrl: {{ url_for('updates.api_updates_detail', processed_game_id=0).rsplit('/', 1)[0]|tojson }},
+            coverBaseUrl: {{ url_for('updates.api_updates_cover', processed_game_id=0).rsplit('/', 2)[0]|tojson }},
             cacheStatusUrl: {{ url_for('updates.api_updates_cache_status')|tojson }},
             cacheBatchSize: {{ igdb_batch_size|tojson }},
             fixBatchSize: {{ FIX_NAMES_BATCH_LIMIT|default(50)|tojson }}
